--- a/webserver.yml
+++ b/webserver.yml
@@ -31,6 +31,17 @@
            virtualenv=/var/www/demo/.venv
       notify: restart apache2
 
+    - name: deactivate the default apache site
+      file: path=/etc/apache2/sites-enabled/000-default.conf state=absent
+      notify: restart apache2
+
+    - name: activate the demo apache site
+      file: >
+            src=/etc/apache2/sites-available/demo.conf
+            dest=/etc/apache2/sites-enabled/demo.conf
+            state=link
+      notify: restart apache2
+  
   handlers:
     - name: restart apache2
       service: name=apache2 state=restarted
