Add loadbalancer nginx config changes

--- a/webserver.yml
+++ b/webserver.yml
@@ -18,11 +18,17 @@
       notify: restart apache2
 
     - name: copy demo app source
-      copy: src=demo/app/ dest=/var/www/demo mode=0755
+      copy: >
+            src=demo/app/
+            dest=/var/www/demo
+            mode=0755
       notify: restart apache2
 
     - name: copy apache2 virtual host config
-      copy: src=demo/demo.conf dest=/etc/apache2/sites-available mode=0755
+      copy: >
+            src=demo/demo.conf
+            dest=/etc/apache2/sites-available
+            mode=0755
       notify: restart apache2
 
     - name: setup python virtual environment
