--- a/loadbalancer.yml
+++ b/loadbalancer.yml
@@ -7,3 +7,25 @@
 
     - name: ensure nginx started
       service: name=nginx state=started enabled=yes
+
+    - name: configure nginx site
+      template: >
+                src=templates/nginx.conf.j2
+                dest=/etc/nginx/sites-available
+                mode=0644
+      notify: restart nginx
+
+    - name: deactivate the default nginx site
+      file: path=/etc/nginx/sites-enabled/default state=absent
+      notify: restart nginx
+
+    - name: activate the ndemo ginx site
+      file: >
+            src=/etc/nginx/sites-available/demo
+            dest=/etc/nginx/sites-enabled/demo
+            state=link
+      notify: restart nginx
+
+  handlers:
+    - name: restart nginx
+      service: name=nginx state=restarted 
