--- a/database.yml
+++ b/database.yml
@@ -10,7 +10,7 @@
 
     - name: ensure mysql listening on all ports
       lineinfile: >
-                  dest=/etc/mysql/mariadb.conf.d/50-server.cnf
+                  dest=/etc/mysql/my.cnf
                   regexp=^bind-address
                   line="bind-address = 0.0.0.0"
       notify: restart mysql
