--- a/playbooks/stack_status.yml
+++ b/playbooks/stack_status.yml
@@ -5,14 +5,23 @@
     - name: verify nginx service
       command: service nginx status
 
+    - name: verify that nginx is listening on port 80
+      wait_for: port=80 timeout=1
+
 - hosts: webserver
   become: true
   tasks:
     - name: verify apache2 service
       command: service apache2 status
+    
+    - name: verify that apache2 is listening on port 80
+      wait_for: port=80 timeout=1
 
 - hosts: db
   become: true
   tasks:
     - name: verify mysql service
       command: service mysql status
+
+    - name: verify that mysql is listening on port 3306
+      wait_for: port=3306 timeout=1
