--- a/playbooks/stack_status.yml
+++ b/playbooks/stack_status.yml
@@ -25,3 +25,25 @@
 
     - name: verify that mysql is listening on port 3306
       wait_for: port=3306 timeout=1
+
+- hosts: control
+  tasks: 
+    - name: verify end-to-end response
+      uri: url=http://{{ item }} return_content=yes
+      with_items: groups.loadbalancer
+      register: lb_index
+
+    - fail: msg="index failed to return content"
+      when: "'Response from' not in item.content"
+      with_items: "{{ lb_index.results }}"
+
+- hosts: loadbalancer
+  tasks: 
+    - name: verify backend response
+      uri: url=http://{{ item }} return_content=yes
+      with_items: groups.webserver
+      register: app_index
+
+    - fail: msg="index failed to return content"
+      when: "'Response from {{ item.item }}' not in item.content"
+      with_items: "{{ app_index.results }}"
