--- a/playbooks/stack_status.yml
+++ b/playbooks/stack_status.yml
@@ -30,7 +30,7 @@
   tasks: 
     - name: verify end-to-end response
       uri: url=http://{{ item }} return_content=yes
-      with_items: "{{ groups['loadbalancer'] }}"
+      with_items: "{{ hostvars[groups['loadbalancer']]['ansible_host'] }}"
       register: lb_index
 
     - fail: msg="index failed to return content"
