--- a/roles/demo_app/tasks/main.yml
+++ b/roles/demo_app/tasks/main.yml
@@ -1,2 +1,34 @@
 ---
-# tasks file for demo_app
+- name: install web components
+  apt: name={{ item }} state=present update_cache=yes
+  with_items:
+    - python-pip
+    - python-virtualenv
+    - python-mysqldb
+
+- name: copy demo app source
+  copy: >
+        src=demo/app/
+        dest=/var/www/demo
+        mode=0755
+  notify: restart apache2
+
+- name: copy apache2 virtual host config
+  copy: >
+        src=demo/demo.conf
+        dest=/etc/apache2/sites-available
+        mode=0755
+  notify: restart apache2
+
+- name: setup python virtual environment
+  pip: >
+        requirements=/var/www/demo/requirements.txt 
+        virtualenv=/var/www/demo/.venv
+  notify: restart apache2
+
+- name: activate the demo apache site
+  file: >
+        src=/etc/apache2/sites-available/demo.conf
+        dest=/etc/apache2/sites-enabled/demo.conf
+        state=link
+  notify: restart apache2
