--- a/playbooks/stack_restart.yml
+++ b/playbooks/stack_restart.yml
@@ -17,7 +17,7 @@
   become: true
   tasks:
     - service: name=mysql state=restarted
-    - wait_for: port=3306 state=started
+    - wait_for: host={{ ansible_wlan0.ipv4.address }} port=3306 state=started
 
 # stack up
 - hosts: webserver
