--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -11,7 +11,7 @@
   lineinfile: >
               dest=/etc/mysql/my.cnf
               regexp=^bind-address
-              line="bind-address = 0.0.0.0"
+              line="bind-address = {{ ansible_wlan0.ipv4.address }}"
   notify: restart mysql
 
 - name: ensure mysql started
