--- a/database.yml
+++ b/database.yml
@@ -2,4 +2,10 @@
 - hosts: db
   become: true
   roles:
-    - mysql
+    - {
+      role: myslq,
+      db_name: demo,
+      db_user_name: demo,
+      db_user_pass: demo,
+      db_user_host: '%'
+    }
