--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -17,13 +17,13 @@
 - name: ensure mysql started
   service: name=mysql state=started enabled=yes
 
-- name: create demo database
-  mysql_db: name=demo state=present
+- name: create database
+  mysql_db: name={{ db_name }} state=present
 
-- name: create demo user
+- name: create user
   mysql_user: >
-              name=demo
-              password=demo
-              priv=demo.*:ALL
-              host='%'
+              name={{ db_user_name }}
+              password={{ db_user_pass }}
+              priv={{ db_name }}.*:ALL
+              host='{{ db_user_host }}'
               state=present
