--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -12,7 +12,7 @@
             src=nginx.conf.j2
             dest=/etc/nginx/sites-available/{{ item.key }}
             mode=0644
-  with_dict: sites
+  with_dict: {{ sites }}
   notify: restart nginx
 
 - name: deactivate default nginx site
@@ -24,7 +24,7 @@
         src=/etc/nginx/sites-available/{{ item.key }}
         dest=/etc/nginx/sites-enabled/{{ item.key }}
         state=link
-  with_dict: sites
+  with_dict: {{ sites }}
   notify: restart nginx
 
 - name: ensure nginx started
