Add functionality to deactivate unused sites

--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -15,8 +15,14 @@
   with_dict: "{{ sites }}"
   notify: restart nginx
 
-- name: deactivate default nginx site
-  file: path=/etc/nginx/sites-enabled/default state=absent
+- name: get active sites
+  shell: ls -1 /etc/nginx/sites-enabled
+  register: active
+
+- name: deactivate nginx sites
+  file: path=/etc/nginx/sites-enabled/{{ item }} state=absent
+  with_items: active.stdout_lines
+  when: item not in sites
   notify: restart nginx
 
 - name: activate nginx sites
