Refactor deactivate task with_items

--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -21,7 +21,7 @@
 
 - name: deactivate nginx sites
   file: path=/etc/nginx/sites-enabled/{{ item }} state=absent
-  with_items: active.stdout_lines
+  with_items: "{{ active.stdout_lines }}"
   when: item not in sites
   notify: restart nginx
 
