Replace copy with template in demo_app

--- a/roles/demo_app/tasks/main.yml
+++ b/roles/demo_app/tasks/main.yml
@@ -14,10 +14,10 @@
   notify: restart apache2
 
 - name: copy demo.wsgi
-  copy: >
-        src=demo.wsgi.j2
-        dest=/var/www/demo/demo.wsgi
-        mode=0755
+  template: >
+            src=demo.wsgi.j2
+            dest=/var/www/demo/demo.wsgi
+            mode=0755
   notify: restart apache2
 
 - name: copy apache2 virtual host config
