--- a/database.yml
+++ b/database.yml
@@ -2,10 +2,7 @@
 - hosts: db
   become: true
   roles:
-    - {
-      role: mysql,
-      db_name: demo,
-      db_user_name: demo,
-      db_user_pass: demo,
+    - role: mysql,
+      db_user_name: "{{ db_user }}"
+      db_user_pass: "{{ db_pass }}"
       db_user_host: '%'
-    }
