--- a/database.yml
+++ b/database.yml
@@ -2,7 +2,7 @@
 - hosts: db
   become: true
   roles:
-    - role: mysql,
+    - role: mysql
       db_user_name: "{{ db_user }}"
       db_user_pass: "{{ db_pass }}"
       db_user_host: '%'
