Add tasks tags to roles

--- a/roles/demo_app/tasks/main.yml
+++ b/roles/demo_app/tasks/main.yml
@@ -5,6 +5,7 @@
     - python-pip
     - python-virtualenv
     - python-mysqldb
+  tags: [ 'packages' ]
 
 - name: copy demo app source
   copy: >
@@ -12,6 +13,7 @@
         dest=/var/www/demo
         mode=0755
   notify: restart apache2
+  tags: [ 'configure' ]
 
 - name: copy demo.wsgi
   template: >
@@ -19,6 +21,7 @@
             dest=/var/www/demo/demo.wsgi
             mode=0755
   notify: restart apache2
+  tags: [ 'configure' ]
 
 - name: copy apache2 virtual host config
   copy: >
@@ -26,12 +29,14 @@
         dest=/etc/apache2/sites-available
         mode=0755
   notify: restart apache2
+  tags: [ 'configure' ]
 
 - name: setup python virtual environment
   pip: >
        requirements=/var/www/demo/requirements.txt 
        virtualenv=/var/www/demo/.venv
   notify: restart apache2
+  tags: [ 'system' ]
 
 - name: activate the demo apache site
   file: >
@@ -39,3 +44,4 @@
         dest=/etc/apache2/sites-enabled/demo.conf
         state=link
   notify: restart apache2
+  tags: [ 'configure' ]
