--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -3,9 +3,11 @@
   apt: name={{ item }} state=present
   with_items:
     - python-mysqldb
+  tags: [ 'packages' ]
 
 - name: install mysql-server
   apt: name=mysql-server state=present
+  tags: [ 'packages' ]
 
 - name: ensure mysql listening on all ports
   lineinfile: >
@@ -13,12 +15,15 @@
               regexp=^bind-address
               line="bind-address = {{ ansible_wlan0.ipv4.address }}"
   notify: restart mysql
+  tags: [ 'configure' ]
 
 - name: ensure mysql started
   service: name=mysql state=started enabled=yes
+  tags: [ 'service' ]
 
 - name: create database
   mysql_db: name={{ db_name }} state=present
+  tags: [ 'configure' ]
 
 - name: create user
   mysql_user: >
@@ -27,3 +32,4 @@
               priv={{ db_name }}.*:ALL
               host='{{ db_user_host }}'
               state=present
+  tags: [ 'configure' ]
