--- a/roles/apache2/tasks/main.yml
+++ b/roles/apache2/tasks/main.yml
@@ -4,13 +4,18 @@
   with_items:
     - apache2
     - libapache2-mod-wsgi
+  tags: [ 'packages' ]
+
 - name: ensure mod-wsgi enabled
   apache2_module: state=present name=wsgi
   notify: restart apache2
+  tags: [ 'configure' ]
 
 - name: deactivate the default apache site
   file: path=/etc/apache2/sites-enabled/000-default.conf state=absent
   notify: restart apache2
+  tags: [ 'configure' ]
 
 - name: ensure apache2 started
   service: name=apache2 state=started enabled=yes
+  tags: [ 'service' ]
