--- a/site.yml
+++ b/site.yml
@@ -5,6 +5,7 @@
   tasks:
     - name: update_apt_cache
       apt: update_cache=yes cache_valid_time=86400
+      tags: [ 'packages' ]
 
 - include: control.yml
 - include: database.yml
