--- a/playbooks/stack_status.yml
+++ b/playbooks/stack_status.yml
@@ -5,6 +5,7 @@
   tasks:
     - name: verify nginx service
       command: service nginx status
+      changed_when: false
 
     - name: verify that nginx is listening on port 80
       wait_for: port=80 timeout=1
@@ -15,6 +16,7 @@
   tasks:
     - name: verify apache2 service
       command: service apache2 status
+      changed_when: false
     
     - name: verify that apache2 is listening on port 80
       wait_for: port=80 timeout=1
@@ -24,6 +26,7 @@
   tasks:
     - name: verify mysql service
       command: service mysql status
+      changed_when: false
 
     - name: verify that mysql is listening on port 3306
       wait_for: host={{ ansible_wlan0.ipv4.address }} port=3306 timeout=1
