Add changed_when to nginx role

--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -21,6 +21,7 @@
 - name: get active sites
   shell: ls -1 /etc/nginx/sites-enabled
   register: active
+  changed_when: "active.stdout_lines != sites.keys()"
   tags: [ 'configure' ]
 
 - name: deactivate nginx sites
